Fix fixed navbar overflow on scroll

--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -4,7 +4,8 @@
 
 .navbar--fixed {  
   position: fixed;
-  width: 100%;
+  left: 0;
+  right: 0;
   z-index: 3;
   background: white;
   border-bottom: 1px solid $primary-border;
